--- a/liquid-prep-app/src/app/components/welcome/welcome.component.scss
+++ b/liquid-prep-app/src/app/components/welcome/welcome.component.scss
@@ -7,28 +7,11 @@ div {
   min-height: 0;
   margin: 0px 0px;
   border-radius: 00px;
-
   background-color: #fff;
 }
 
-.swiper-container {
-  position: absolute;
-  height: 600px;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.swiper-slide {
-  height: 600px;
-  color: #aaa;
-  background-color: #eee;
-}
-
-.swiper-slide-active {
-  color: #fff;
-  background-color: #aaa;
+swiper-slide.swiper-item{
+  background-color: white;
 }
 
 /* customise*/
@@ -40,10 +23,6 @@ div {
   -ms-transform: translate(-50%, -50%);
   color: white;
   background-color: #2F4FFE;
-}
-
-div.swiper-slide {
-  background-color: white;
 }
 
 h1.title {
