Move sensor type and field id from sensor name to local storage

--- a/liquid-prep-app/src/app/components/dashboard/sensors-v2/sensors-v2.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/sensors-v2/sensors-v2.component.html
@@ -52,9 +52,11 @@
             Moisture Level: <span>{{ sensor.moisture }}</span> &nbsp; &nbsp;
             <span>{{ sensor.lastUpdate }}</span>
           </div>
-
-          <button mat-icon-button color="accent" (click)="showDialog(sensor)">
+          <button mat-icon-button color="accent" (click)="showSensorTypeAndFieldDialog(sensor)">
             <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button color="accent" (click)="showDialog(sensor)">
+            <mat-icon>sensors</mat-icon>
           </button>
         </mat-list-item>
 
