Remove character limit in sensor name

--- a/liquid-prep-app/src/app/components/dialog/dialog.component.html
+++ b/liquid-prep-app/src/app/components/dialog/dialog.component.html
@@ -18,7 +18,7 @@
         <div  *ngIf="showNameInput">
           <mat-form-field appearance="outline">
             <mat-label>{{label}}</mat-label>
-            <input matInput name="name" [(ngModel)]="name" required maxlength="10">
+            <input matInput name="name" [(ngModel)]="name" required>
           </mat-form-field>
           <!-- <mat-form-field appearance="outline">
             <mat-label>Sensor Type</mat-label>
