--- a/liquid-prep-app/src/app/components/sensor-type-and-field/sensor-type-and-field.component.html
+++ b/liquid-prep-app/src/app/components/sensor-type-and-field/sensor-type-and-field.component.html
@@ -2,6 +2,10 @@
 <div mat-dialog-content>
   <form #form="ngForm" class="demo-form">
     <mat-form-field appearance="outline">
+      <mat-label>Sensor Name</mat-label>
+      <input matInput name="name" [(ngModel)]="name" required>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
       <mat-label>Sensor Type</mat-label>
       <mat-select [(ngModel)]="sensorType" name="sensorType" required>
         <mat-option value="gen"
