upgrading material and cdk to 13

--- a/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.scss
+++ b/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.scss
@@ -133,9 +133,9 @@
   //justify-content: space-between;
   padding: 0px 0px;
   background-color: white;
-  //-webkit-box-shadow: 3px 3px 5px 6px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
-  //-moz-box-shadow:    3px 3px 5px 6px #ccc;  /* Firefox 3.5 - 3.6 */
-  //box-shadow:        2px 2px 4px 5px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
+  //-webkit-box-shadow: 3px 3px 5px 6px #ccc;  __<<ngThemingMigrationEscapedComment0>>__
+  //-moz-box-shadow:    3px 3px 5px 6px #ccc;  __<<ngThemingMigrationEscapedComment1>>__
+  //box-shadow:        2px 2px 4px 5px #ccc;  __<<ngThemingMigrationEscapedComment2>>__
 }
 
 .tool-bar-spacer {
