upgrade to angular 17

--- a/liquid-prep-app/src/app/components/settings/settings.component.html
+++ b/liquid-prep-app/src/app/components/settings/settings.component.html
@@ -8,7 +8,7 @@
       <mat-icon class="menu-list-profile-icon" mat-list-icon>person_outline_24px</mat-icon>
       <p mat-line class="menu-list-body">Liquid Prep User</p>
       <mat-icon class="menu-list-icon" mat-list-icon>navigate_next</mat-icon>
-      <span mat-line>liquidprep@farmer.com</span>
+      <span mat-line>liquidprep&#64;farmer.com</span>
     </a>
    </mat-list-item>
    <mat-divider></mat-divider>
