--- a/liquid-prep-app/src/app/components/dashboard/dashboard.component.scss
+++ b/liquid-prep-app/src/app/components/dashboard/dashboard.component.scss
@@ -99,6 +99,12 @@ button:hover,
   color: lightgrey;
 }
 
+.toolbarNav button {
+  background-color: #2f4ffe !important;
+  color: lightgrey;
+}
+
 .mat-icon {
   margin-bottom: 4px;
 }
+
