--- a/liquid-prep-app/src/styles.scss
+++ b/liquid-prep-app/src/styles.scss
@@ -22,15 +22,15 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$liquid-prep-app-primary: mat.define-palette(mat.$indigo-palette);
-$liquid-prep-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$liquid-prep-app-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
+$liquid-prep-app-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$liquid-prep-app-warn: mat.define-palette(mat.$red-palette);
+$liquid-prep-app-warn: mat.m2-define-palette(mat.$m2-red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$liquid-prep-app-theme: mat.define-light-theme((
+$liquid-prep-app-theme: mat.m2-define-light-theme((
   color: (
     primary: $liquid-prep-app-primary,
     accent: $liquid-prep-app-accent,
