--- a/liquid-prep-app/src/app/components/select-crop/select-crop.component.html
+++ b/liquid-prep-app/src/app/components/select-crop/select-crop.component.html
@@ -29,7 +29,7 @@
         <mat-icon>search</mat-icon>
       </button>
       <input class="search-control" type="text" placeholder="Search" [(ngModel)]="searchText">
-      <button mat-button mat-icon-button (click)="searchClose()">
+      <button mat-button (click)="searchClose()">
         <mat-icon>close</mat-icon>
       </button>
     </mat-toolbar-row>
