--- a/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.scss
+++ b/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.scss
@@ -8,31 +8,6 @@
   background-color: #fff;
 }
 
-.swiper-container {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-}
-
-.swiper-slide {
-  color: white;
-  background-color: white;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  -webkit-justify-content: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-}
-
 .title {
   color: #666666;
   font-size: 20px;
@@ -108,6 +83,9 @@
   background-color: #2F4FFE;
   font-size: 16px;
   letter-spacing: 2px;
+  align-items: center;
+  white-space: nowrap;
+  line-height: 2;
 }
 
 .m-button{
