Add bluetooth page

--- a/liquid-prep-app/src/app/components/dashboard/dashboard.component.html
+++ b/liquid-prep-app/src/app/components/dashboard/dashboard.component.html
@@ -20,6 +20,12 @@
               <span>Sensors</span>
             </div>
           </button>
+          <button mat-flat-button routerLink="bluetooth" routerLinkActive="active-link" class="btn-color" >
+            <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="0px">
+              <mat-icon class="material-symbols-outlined">bluetooth</mat-icon>
+              <span>Bluetooth</span>
+            </div>
+          </button>
           <button mat-flat-button routerLink="home" routerLinkActive="active-link" class="btn-color">
             <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="0px">
               <mat-icon class="material-icons">home</mat-icon>
