--- a/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.scss
+++ b/liquid-prep-app/src/app/components/measure-soil/measure-soil.component.scss
@@ -35,6 +35,15 @@
     }
   }
 
+  .water-advice-image {
+    margin-bottom: 24px;
+  }
+
+  .water-advice {
+    font-style: italic;
+    font-size: 16px;
+    text-align: center;
+  }
 }
 
 .content-container {
